--- a/src/App.css
+++ b/src/App.css
@@ -18,7 +18,6 @@ a{
 }
 body{
   width: 100%;
-  
 }
 button{
   cursor: pointer;
@@ -40,12 +39,16 @@ button{
 .section{
   padding: 6rem 0 2rem;
 }
+.section__title{
+  text-align: center;
+}
 .section__subtitle{
   margin-bottom: 4rem;
 }
 
 .container{
   max-width: 968px;
+  padding: 0;
   margin-left: auto;
   margin-right: auto;
 }
