--- a/src/components/yo/yo.css
+++ b/src/components/yo/yo.css
@@ -76,6 +76,8 @@
         padding: 0 5rem;
         margin-bottom: 2rem;
     }
+
+    /** SKILLS */
 }
   
   /* Medium */
@@ -97,6 +99,11 @@
     .yo__title{
         font-size: 16px;
     }
+    /** SKILLS */
+    
+    .skills__content{
+        padding: 1.5rem;
+    }
 }
   
   /* Small*/
@@ -108,4 +115,72 @@
     .yo__img{
         width: 120px;
     }
+    /** SKILLS */
+    .skills__box{
+        column-gap: 1.25rem;
+    }
+    .skills__name{
+        font-size: small;
+    }
+    .skills__content{
+        padding: 1rem 2rem;
+        
+    }
+}
+
+
+
+/** SKILLS */
+
+.skills_container {
+    grid-template-columns: repeat(2, 1fr) !important; 
+    column-gap: 1.5rem;
+    justify-content: center;
+    align-items: center;
+}
+.skills h2{
+    margin: 2rem 0;
+}
+
+.skills__content {
+    border: 1px solid rgba(0, 0, 0, 0.1);
+    padding: 2rem 4rem;
+    border-radius: 1.25rem;
+    max-width: 320px;
+    justify-self: center;
+}
+
+.skills__title {
+    text-align: center;
+    margin-bottom: 1.5rem;
+}
+
+.skills__box{
+    display: flex;
+    justify-content: center;
+    column-gap: 2.5rem;
+}
+
+.skills__group{
+    display: grid;
+    align-items: flex-start;
+    row-gap: 1rem;
+}
+
+.skills__data{
+    display: flex;
+    column-gap: 0.5rem;
+}
+
+.skills__data i{
+    font-size: 1rem;
+    color: rgb(160, 5, 5);
+}
+
+.skills__name{
+    line-height: 18px;
+}
+
+.skills__level{
+    font-size: small;
 }
