--- a/src/components/portfolio/portfolio.css
+++ b/src/components/portfolio/portfolio.css
@@ -4,6 +4,7 @@
     align-items: center;
     margin-bottom: 1rem;
 }
+
 .portfolio__container h3{
     margin-bottom: 1rem;
 }
@@ -19,6 +20,10 @@
     align-items: center;
     justify-items: center;
 }
+.projects__list a{
+    text-decoration: none;
+    color: black;
+}
 .project{
     display: grid;
     grid-template-columns: 1fr 2fr;
@@ -30,13 +35,12 @@
     border-radius: 1rem;
 }
 .project:hover{
-    cursor: pointer;
     content: "";
     background: linear-gradient(
         45deg, rgb(248, 247, 247), rgba(170, 16, 16, 0.214), rgb(248, 247, 247), rgba(164, 11, 11, 0.367)
     );
     background-size: 800%;
-    border: 1px solid rgba(160, 160, 228, 0.57);
+    border: 1px solid rgb(160, 5, 5);
     border-radius: 1rem;
     box-shadow: 10px 10px 10px rgba(0, 0, 0, 0.1);
     animation: glowing 20s linear infinite;
@@ -52,10 +56,31 @@
         background-position: 0 0;
     }
 }
-
+.botonCode{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    padding: 0.2rem;
+    border: 1px solid black;
+    text-align: center;
+    width: 50px;
+    height: 50px;
+    transition: 0.2s all ease;
+}
+.botonCode:hover{
+    background-color: white;
+    color: rgb(160, 5, 5);
+}
 
 .project__description{
     padding: 1rem;
+    display: flex;
+}
+.project__description div{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    margin: 0 4px;
 }
 @media screen and (min-width: 993px){
     .project img{
