--- a/src/components/portfolio/portfolio.css
+++ b/src/components/portfolio/portfolio.css
@@ -76,7 +76,7 @@
     padding: 1rem;
     display: flex;
 }
-.project__description div{
+.desc{
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -90,7 +90,7 @@
 @media screen and (max-width: 992px){
     .project{
         display: grid;
-        grid-template-columns: 1fr;
+        grid-template-columns: 2fr;
         grid-template-areas: "img"
                              "text";
         width: 80%;
@@ -105,5 +105,30 @@
         grid-area: text;
         width: 100%;
         font-size: small;
+    }
+}
+@media screen and (min-width: 577px){
+    .botonDiv{
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+    }
+}
+@media screen and (max-width: 576px){
+    .project__description{
+        padding: 0.8rem;
+        display: flex;
+        flex-direction: column;
+    }
+    .botonCode{
+        max-width: 50px;
+    }
+    .botonDiv{
+        margin-top: 0.5rem;
+        display: flex;
+        justify-content: end;
+        align-items: end;
+        margin-bottom: 0%;
+        text-align: center;
     }
 }
