--- a/src/App.css
+++ b/src/App.css
@@ -5,9 +5,11 @@
   padding: 0;
   box-sizing: border-box;
   font-family: 'Poppins', sans-serif;
+  
 }
 html{
   scroll-behavior: smooth;
+  background-color: var(--background) !important;
 }
 
 ul{
@@ -18,7 +20,39 @@ a{
 }
 body{
   width: 100%;
+  
 }
+.App{
+  background-color: var(--background);
+  color: var(--text-primary);
+  transition: all .4s;
+}
+.theme-toggle{
+  position: absolute;
+  z-index: 100;
+  cursor: pointer;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  padding: 0.5rem;
+  border-radius: 8px;
+  font-size: 2rem;
+
+}
+:root{
+  --background: white;
+  --text-primary: black;
+  --text-secondary: rgb(75, 74, 74);
+  --third: rgb(213, 213, 213);
+}
+
+[data-theme="dark"]{
+  --background: black;
+  --text-primary: white;
+  --text-secondary: rgb(146, 146, 146);
+  --third: rgb(146, 146, 146);
+}
+
 button{
   cursor: pointer;
   border: none;
@@ -73,7 +107,7 @@ button{
 
 @media screen and (max-width: 768px){
   body{
-    margin: 0 0 126px 0;
+    padding: 0 0 80px 0;
   }
   .section{
     padding: 2rem 0 1rem;
