--- a/src/components/footer/footer.css
+++ b/src/components/footer/footer.css
@@ -1,17 +1,18 @@
 .footer{
-    background-color: rgba(159, 158, 158, 0.052);
+    background-color: var(--background);
     border-top: 1.5px solid rgb(160, 5, 5);
 }
 
 .footer__container{
     padding: 2rem 0 6rem;
+    
 }
 
 .footer__title{
     text-align: center;
     margin: 1rem;
     font-size: 2rem;
-    color: rgb(0, 0, 0);
+    color: var(--text-primary);
 }
 .footer__social{
     display: flex;
@@ -20,7 +21,7 @@
 }
 
 .footer__social-link{
-    background-color: rgb(78, 78, 78);
+    background-color: var(--text-secondary);
     color: white;
     font-size: 1.125rem;
     padding: 0.4rem;
@@ -34,6 +35,7 @@
     padding: 2.5rem;
     text-align: center;
     font-size: smaller;
+    color: var(--text-secondary);
 }
 
 @media screen and (max-width: 992px){
@@ -42,4 +44,4 @@
         border-radius: 0.25rem;
         font-size: 1rem;
     }
-  }
+}
