--- a/src/components/header/header.css
+++ b/src/components/header/header.css
@@ -3,15 +3,22 @@
     position: fixed;
     top: 0;
     left: 0;
-    background-color: white;
+    background-color: var(--background);
     z-index: 100;
+    
 }
 .nav__logo{
-    width: 20%;
+    width: 80px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: white;
+    border-radius: 1rem;
 }
 .nav{
     display: flex;
     justify-content: space-between;
+    background-color: var(--background);
     align-items: center;
     column-gap: 1rem;
     height: calc(var(--header-height) + 1.5rem);
@@ -24,7 +31,7 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    color: rgb(66, 66, 66);
+    color: var(--text-secondary);
 }
 .nav__icon, .nav__close, .nav__toggle{
     display: none;
@@ -50,9 +57,9 @@
         bottom: -100%;
         left: 0;
         width: 100%;
-        background-color: white;
+        background-color: var(--background);
         padding: 2rem 1.5rem 4rem;
-        box-shadow: 0 -1px 4px rgba(0, 0, 0, 0.15);
+        box-shadow: 0 -1px 4px var(--text-secondary);
         border-radius: 1.5rem 1.5rem 0 0;
         transition: .3s;
     }
