--- a/src/App.css
+++ b/src/App.css
@@ -34,10 +34,18 @@ body{
   display: flex;
   align-items: center;
   justify-content: center;
-  padding: 0.5rem;
-  border-radius: 8px;
+  padding: 0.2rem 0.4rem;
+  border-radius: 1.3rem;
   font-size: 2rem;
+  right: 10px;
+  top: 8px;
+  transition: all 0.3s ease;
+  
+}
 
+
+.theme-toggle:hover{
+  box-shadow:  0px 2px 4px var(--text-primary);
 }
 :root{
   --background: white;
