--- a/src/components/header/header.css
+++ b/src/components/header/header.css
@@ -14,10 +14,11 @@
     align-items: center;
     background-color: white;
     border-radius: 1rem;
+    
 }
 .nav{
     display: flex;
-    justify-content: space-between;
+    justify-content: space-around;
     background-color: var(--background);
     align-items: center;
     column-gap: 1rem;
