--- a/src/components/home/home.css
+++ b/src/components/home/home.css
@@ -1,17 +1,41 @@
-.home__content{
-    grid-template-columns: 116px repeat(2, 1fr);
-    padding-top: 9.5rem;
-    column-gap: 2rem;
-    align-items: center;
 
+.home__content{
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    padding-top: 9.5rem;
+    
+    align-items: center;
+}
+.text{
+    width: 100%;
+    color: rgb(160, 5, 5);
+    font-size: 5vw;
+    font-weight: bolder;
+    text-align: center;
+    -webkit-box-reflect: below 1px linear-gradient(transparent, #0008);
+    line-height: 3rem;
+    outline: none;
+    animation: animate 6s linear infinite;
+}
+@keyframes animate {
+    0%, 18%, 20%, 50.1%, 60%, 65.1%, 80%, 90.1%, 92%{
+        color: var(--text-secondary);
+        text-shadow: none;}
+    18.1%, 20.1%, 30%, 50%, 60.1%, 65%, 80.1%, 100%{
+        color: rgb(160, 5, 5);
+        text-shadow: 0 0 10px rgba(173, 51, 51, 0.548),
+        0 0 20px rgba(192, 78, 78, 0.464),
+        0 0 40px rgba(180, 77, 77, 0.646),
+        0 0 80px rgba(177, 67, 67, 0.615),
+        0 0 160px rgba(180, 58, 58, 0.646);
+    }
 }
 .home__social{
-    display: grid;
-    grid-template-columns: max-content;
-    row-gap: 1rem;
+    display: flex;
+    gap: 1rem;
 }
 .home__social-icon{
-    font-size: 1.25rem;
+    font-size: 2.25rem;
     color: var(--text-secondary);
 }
 .home__social-icon:hover{
@@ -20,6 +44,9 @@
 .home__title {
     font-size: 2rem;
     margin-bottom: 0.25rem;
+    display: flex;
+    align-items: center;
+    gap: 1rem;
 }
 .home__subtitle{
     position: relative;
@@ -34,37 +61,23 @@
 }
 
 .home__img{
-    background: url(../../assets/perfil.jpeg);
-    background-repeat: no-repeat;
-    background-position: center;
-    background-size:contain;
-    height: 250px;
-    width: 250px;
-    box-shadow: inset 0 0 0 9px rgb(255 255 255 / 30%);
+    color: var(--text-primary);
     order: 1;
     justify-self: center;
-    animation: profile__animate 8s ease-in-out infinite 1s;
+    width: 100%;
+
 }
-@keyframes profile__animate {
-    0% {
-        border-radius: 60% 40% 30% 70%/60% 30% 70% 40%;
-    }
-    50%{
-        border-radius: 30% 60% 70% 40%/50% 60% 30% 60%;
-    }
-    100%{
-        border-radius: 60% 40% 30% 70%/60% 30% 70% 40%;
-    }
+.home__img span{
+    color: var(--text-primary);
+    font-size: 5rem;
+    z-index: 100;
 }
+
 
 
 /** BREAKPOINTS **/
 
 @media screen and (max-width: 992px){
-    .home__content {
-        grid-template-columns: 100px repeat(2, 1fr);
-        column-gap: 1.25rem;
-    }
     .home__subtitle{
         
         margin-bottom: 1rem;
@@ -84,33 +97,37 @@
   
   @media screen and (max-width: 768px) {
     .home__content{
-        grid-template-columns: 0.5fr 3fr;
         padding-top: 4rem;
-    }
-    .home__img{
-        order: initial;
-        justify-self: initial;
+        display: flex !important;
+        flex-direction: row-reverse;
+        flex-wrap: wrap;
+        justify-content: center;
     }
     .home__data{
         grid-column: 1/3;
     }
-    .home__img{
-        height: 200px;
-        width: 200px;
-        box-shadow: inset 0 0 0 9px rgb(255 255 255 / 30%);
+    .text{
+        text-align: end;
+        margin: 0 0 2rem;
+        line-height: 1rem;
+    }
+    .home__description{
+        width: 90%;
     }
   }
   
   @media screen and (max-width: 576px){
-   
+    .text{
+        font-size: 10vw;
+    }
+    .home__title{
+        font-size: 1.5rem;
+    }
   }
   
   /* Small*/
   
   @media screen and (max-width: 350px){
-    .home__img{
-        width: 150px;
-        height: 150px;
-    }
+    
 
   }
