--- a/src/components/yo/yo.css
+++ b/src/components/yo/yo.css
@@ -13,6 +13,19 @@
     width: 350px;
     border-radius: 1rem;
     justify-self: center;
+   
+    animation: profile__animate 7s ease-in-out infinite 1s;
+}
+@keyframes profile__animate {
+    0% {
+        border-radius: 60% 40% 30% 70%/60% 30% 70% 40%;
+    }
+    50%{
+        border-radius: 30% 60% 70% 40%/50% 60% 30% 60%;
+    }
+    100%{
+        border-radius: 60% 40% 30% 70%/60% 30% 70% 40%;
+    }
 }
 
 .yo__info{
@@ -27,9 +40,24 @@
     border: 1px solid var(--text-secondary);
     border-radius: 0.75rem;
     text-align: center;
-    padding: 1rem;
-    height: 170px;
-   
+    padding: 0.5rem;
+    height: 130px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    transition: all 0.4s ease;
+}
+a{
+    text-decoration: none;
+    color: var(--text-primary);
+}
+a span{
+    color: var(--text-secondary);
+}
+.yo__box:hover{
+    border: 1px solid rgb(160, 5, 5);
+    box-shadow: 0px 0px 10px rgb(160, 5, 5);
+    cursor: pointer;
 }
 .yo__icon{
     font-size: 1.5rem;
