--- a/src/App.css
+++ b/src/App.css
@@ -7,6 +7,9 @@
   font-family: 'Poppins', sans-serif;
   
 }
+
+
+*:hover{ -webkit-tap-highlight-color: rgba(0,0,0,0); }
 html{
   scroll-behavior: smooth;
   background-color: var(--background) !important;
@@ -42,7 +45,9 @@ body{
   transition: all 0.3s ease;
   
 }
-
+.code{
+  right: 70px;
+}
 
 .theme-toggle:hover{
   box-shadow:  0px 2px 4px var(--text-primary);
@@ -52,6 +57,7 @@ body{
   --text-primary: black;
   --text-secondary: rgb(75, 74, 74);
   --third: rgb(213, 213, 213);
+  --fourth: rgb(241, 238, 238);
 }
 
 [data-theme="dark"]{
@@ -59,6 +65,7 @@ body{
   --text-primary: white;
   --text-secondary: rgb(146, 146, 146);
   --third: rgb(146, 146, 146);
+  --fourth: rgb(35, 35, 35);
 }
 
 button{
