--- a/src/components/portfolio/portfolio.css
+++ b/src/components/portfolio/portfolio.css
@@ -7,6 +7,7 @@
 
 .portfolio__container h3{
     margin-bottom: 1rem;
+    padding: 6px;
 }
 .portfolio__icon{
     font-size: 40px;
@@ -149,32 +150,54 @@
 
 .containerOptions{
     background-color: var(--background);
-    padding: 1rem 0.5rem;
-    border-radius: 9px;
-    border: 0.1px solid rgb(160, 5, 5);
     position: absolute;
-    right: 0px;
-    top: 1.7rem;
+    box-shadow: 0 0 10px var(--text-secondary);
+    right: 4px;
+    border-radius: 9px;
+    padding: 8px;
+    top: 2rem;
 }
 
+@keyframes text {
+    0%{
+        margin-bottom: 0rem;
+        padding: 0;
+        height: 10px;
+    }
+    40%{
+        height: 20px;
+    }
+    100%{
+        height: 100%;
+    }
+}
 .select{
     cursor: pointer;
     transition: 0.3s ease;
     display: flex;
+    align-items: center;
     height: 1.7rem;
-    padding: 0 6px 0 6px;
+    padding: 16px;
+    border-radius: 8px;
+    user-select: none;
+    font-weight: bold;
 }
 .select:hover{
     background-color: var(--third);
-    border-radius: 8px;
 }
 
 .optionsProjects li{
-    margin-bottom: 0.5rem;
     cursor: pointer;
-    padding: 0 0.5rem;
+    margin-bottom: 4px;
+    padding: 0.3rem;
+    animation: text 0.2s ease;
+    border: 0.3px solid transparent;
+    border-radius: 8px;
+    background-color: var(--background);
+    transition: all 0.3s ease;
+    user-select: none;
 }
 .optionsProjects li:hover{
-    background-color: var(--third);
-    border-radius: 8px;
+    background-color: var(--fourth);
+    
 }
