--- a/src/components/yo/yo.css
+++ b/src/components/yo/yo.css
@@ -75,8 +75,9 @@ a span{
     align-self: center;
 }
 .yo__description{
-    
+    padding: 5px;
     margin-bottom: 2.5rem;
+    color: var(--text-secondary);
 }
 
 
@@ -156,7 +157,7 @@ a span{
     }
     .yo__description{
         padding: 0 5rem;
-        margin-bottom: 2rem;
+        margin-bottom: 3em;
     }
 
     /** SKILLS */
