--- a/src/components/header/header.css
+++ b/src/components/header/header.css
@@ -9,12 +9,13 @@
 }
 .nav__logo{
     width: 80px;
+    padding-top: 7px;
     display: flex;
     justify-content: center;
     align-items: center;
-    background-color: white;
-    border-radius: 1rem;
-    
+}
+.nav__logo img{
+    width: 100px;
 }
 .nav{
     display: flex;
@@ -27,7 +28,6 @@
 .nav__list {
     display: flex;
     column-gap: 3.8rem;
-
 }
 .nav__link {
     display: flex;
@@ -47,10 +47,10 @@
 @media screen and (max-width: 992px){
     .nav{
         justify-content: flex-start;
+        
         gap: 10rem;
     }
     .nav__list{
-        
         column-gap: 2.8rem;
     }
     .nav__logo{
@@ -62,10 +62,12 @@
     .header{
         top: initial;
         bottom: 0;
+        padding-top: 0.6rem;
     }
 
     .nav {
-        height: var(--header-height)
+        height: var(--header-height);
+        justify-content: space-around;
     }
     .nav__menu {
         position: fixed;
@@ -101,6 +103,10 @@
     .nav__toggle{
         font-size: 1.5rem;
         cursor: pointer;
+        transition: all 0.2s ease;
+    }
+    .nav__toggle:active{
+        transform: scale(0.7);
     }
 
     .nav__icon,
