--- a/src/components/contact/contact.css
+++ b/src/components/contact/contact.css
@@ -32,8 +32,13 @@
     outline: none;
     border-radius: 0.75rem;
     padding: 1.25rem;
-    z-index: 1;    
+    z-index: 1;
+    transition: all 0.2s linear;   
 }
+.contact__form-input:focus{
+    border: 2px solid rgb(160, 5, 5);
+}
+
 .contact__form-div{
     position: relative;
 }
@@ -57,6 +62,8 @@
 .button .uil{
     transition: all 0.3s ease;
 }
-.button:hover .uil{
-    
+@media screen and (max-width: 576px){
+    .contact__form{
+        width: 80%;
+    }
 }
