--- a/src/components/home/home.css
+++ b/src/components/home/home.css
@@ -103,9 +103,7 @@
         flex-wrap: wrap;
         justify-content: center;
     }
-    .home__data{
-        grid-column: 1/3;
-    }
+
     .text{
         text-align: end;
         margin: 0 0 2rem;
@@ -113,6 +111,10 @@
     }
     .home__description{
         width: 90%;
+    }
+    .contact1{
+        display: flex;
+        justify-content: flex-start;
     }
   }
   
